WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191349
TileController::tileSize() should not have side effects
https://bugs.webkit.org/show_bug.cgi?id=191349
Summary
TileController::tileSize() should not have side effects
Simon Fraser (smfr)
Reported
2018-11-07 00:27:55 PST
TileController::tileSize() should not have side effects
Attachments
Patch
(3.67 KB, patch)
2018-11-07 00:29 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2018-11-07 00:29:56 PST
Created
attachment 354068
[details]
Patch
WebKit Commit Bot
Comment 2
2018-11-07 07:21:13 PST
Comment on
attachment 354068
[details]
Patch Clearing flags on attachment: 354068 Committed
r237925
: <
https://trac.webkit.org/changeset/237925
>
WebKit Commit Bot
Comment 3
2018-11-07 07:21:14 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-11-07 07:22:23 PST
<
rdar://problem/45875045
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug