TileController::tileSize() should not have side effects https://bugs.webkit.org/show_bug.cgi?id=191349

Reviewed by Zalan Bujtas.

Calling TileController::tileSize() would recompute a new tile size and set m_tileSizeLocked,
which caused test failures if logging was enabled when running tests.

* platform/graphics/ca/TileController.cpp:
(WebCore::TileController::tileSize const):
(WebCore::TileController::computeTileSize):
* platform/graphics/ca/TileController.h:
* platform/graphics/ca/TileGrid.cpp:
(WebCore::TileGrid::revalidateTiles):


Canonical link: https://commits.webkit.org/206164@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237925 268f45cc-cd09-0410-ab3c-d52691b4dbfc